added subtitles endpoint

--- a/nginx/translator.conf.example
+++ b/nginx/translator.conf.example
@@ -2,6 +2,7 @@ server {
     listen 80;
     server_name translator.example.com;
 
+    # LibreTranslate API (translation)
     location / {
         proxy_pass http://127.0.0.1:5000;
         proxy_http_version 1.1;
@@ -12,6 +13,16 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
+    }
+
+    # Subtitle API (subtitle lookups from MongoDB)
+    location /subtitles/ {
+        proxy_pass http://127.0.0.1:3300;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
 
