--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,5 +23,19 @@ services:
         limits:
           memory: 5G
 
+  subtitle-api:
+    build:
+      context: .
+      dockerfile: api/Dockerfile
+    container_name: 3speak-subtitle-api
+    restart: unless-stopped
+    ports:
+      - "${API_PORT:-3300}:${API_PORT:-3300}"
+    environment:
+      - MONGODB_URI=${MONGODB_URI}
+      - DATABASE_NAME=${DATABASE_NAME:-threespeak}
+      - COLLECTION_NAME=${COLLECTION_NAME:-subtitles}
+      - API_PORT=${API_PORT:-3300}
+
 volumes:
   lt-models:
